# Astera

./: .gitignore  622-property-tests-calculate-interest.patch  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  contracts.yml  pr-title.yml  release.yml  testnet-deploy.yml
benchmarks/src/: lib.rs
contracts/: Cargo.toml
contracts/.cargo/: audit.toml
contracts/credit_score/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs
contracts/insurance/tests/: premium_pricing_tests.rs  reserve_tests.rs
contracts/invoice/: Cargo.toml
contracts/oracle_registry/: Cargo.toml
contracts/oracle_registry/src/: lib.rs
contracts/oracle_registry/tests/: consensus_tests.rs  fuzz_tests.rs  registration_tests.rs
contracts/pool/: Cargo.toml
contracts/share/: Cargo.toml
contracts/tests/: integration_tests.rs
docs/: ARCHITECTURE.md  contributing.md  security-validation.md  upgrade-dry-run.md  workflows.md
docs/guides/: README.md  faq.md  glossary.md  investor-guide.md  sme-guide.md  (+1 more)
frontend/: .env.example  CONTRIBUTING.md  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  playwright.local.config.ts  tsconfig.json
indexer/: package-lock.json
mock-service/: README.md  db.json
oracle-service/: README.md
scripts/: smoke-test-testnet.sh  upgrade-dry-run.sh
(+1698 files in other folders)
